--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
     <header id="top">
@@ -28,7 +29,9 @@
         <section class="card" id="css-section">
           <h2>CSS</h2>
           <ul>
-            <li>Enter your CSS notes here</li>
+            <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+            <li>Inline CSS is used to style an element directly in HTML.</li>
+            <li></li>
           </ul>
         </section>
      
