added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,33 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
     <link rel="stylesheet" href="./assets/style.css">
+    <title>Prework Study Guide</title>
+  
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
-    <main>
-<<<<<<< HEAD
-      <section class="card" id="html-section">
-        <h2>HTML</h2>
-        <ul>
-          <li>The head element contains information about the webpage.</li>
-          <li>The body element represents the visible content shown to the user.</li>
-          <li>The section element defines a section in a documenet that contains thematic content</li>
-          <li>Section elements go inside the main element</li>
-          <li> h1, h2, h3, etc. define header tiers</li>
-          <li>ul tags create an unordered list of items, ol tags create ordered lists, and li tags create list items</li>
-          <li>The `src` attribute defines the location, or source, of the image file.</li>
-          <li>The `alt` attribute contains a text string that describes the appearance and functionality of the image.</li>
-        </ul>
+        <section class="card" id="html-section">
+          <h2>HTML</h2>
+          <ul>
+            <li>The head element contains information about the webpage.</li>
+            <li>The body element represents the visible content shown to the user.</li>
+            <li>The section element defines a section in a documenet that contains thematic content</li>
+            <li>Section elements go inside the main element</li>
+            <li> h1, h2, h3, etc. define header tiers</li>
+            <li>ul tags create an unordered list of items, ol tags create ordered lists, and li tags create list items</li>
+            <li>The `src` attribute defines the location, or source, of the image file.</li>
+            <li>The `alt` attribute contains a text string that describes the appearance and functionality of the image.</li>
+            <li>Remember to close all your sections or else your boxes won't come out right and you'll be stuck trying to figure out what's wrong for two weeks 🥲</li>
+         </ul>
+        </section>
+
         <section class="card" id="css-section">
           <h2>CSS</h2>
           <ul>
             <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
             <li>Inline CSS is used to style an element directly in HTML.</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
             <li></li>
           </ul>
         </section>
@@ -52,10 +56,6 @@
             <li>Enter your JavaScript notes here</li>
           </ul>
         </section>
-=======
-      <!-- Student code goes here -->
-    </main>
->>>>>>> c0ffc3666682c3ce0c7c7fc17e7268a2a059c6eb
 
     <footer>
       <p>I can code!</p>
