Added JavaScript to project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
         <section class="card" id="html-section">
           <h2>HTML</h2>
@@ -53,12 +54,13 @@
         <section class="card" id="javascript-section">
           <h2>JavaScript</h2>
           <ul>
-            <li>Enter your JavaScript notes here</li>
+            <li>Arrays are useful tools for storing multiple items with different data types in a single variable, but not all arrays must have multiple data types. </li>
           </ul>
         </section>
 
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
