--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <h2>JavaScript</h2>
           <ul>
             <li>Arrays are useful tools for storing multiple items with different data types in a single variable, but not all arrays must have multiple data types. </li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li></li>
           </ul>
         </section>
 
