Fixed JavaScript notes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
           <h2>JavaScript</h2>
           <ul>
             <li>Enter your JavaScript notes here</li>
-          </ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>To declare a function, we use the function keyword and then give our function a unique name followed by parentheses. Then we add curly brackets {} that contain the code for the task we want to perform. </li>
+          <li>Remember to include the empty parentheses after the function name.</li>
+          
+
         </section>
 
     <footer>
