--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <li>Arrays are useful tools for storing multiple items with different data types in a single variable, but not all arrays must have multiple data types. </li>
             <li>A variable is a named container that allows us to store data in our code.</li>
             <li>Control flow is the order in which a computer executes code in a script.</li>
-            <li></li>
+            <li>To declare a function, we use the function keyword and then give our function a unique name followed by parentheses. Then we add curly brackets {} that contain the code for the task we want to perform. </li>
+            <li>Remember to include the empty parentheses after the function name.</li>
+            </li>
           </ul>
         </section>
 
